<resources>
    <string name="app_name">Music Articles</string>
    <string name="user_name">mollbi</string>
    <string name="headline">из мира музыки</string>
    <string name="icon_home">Home</string>
    <string name="icon_edit">Edit</string>
    <string name="icon_back">Back</string>
    <string name="icon_more">More</string>
    <string name="image_description">Cover</string>
    <string name="date_placeholder">4 октября 2024</string>
    <string name="count_label">"всего статей: "</string>
    <string name="no_article">ARTICLE NOT FOUND((</string>
    <string name="modal_copy">Скопировать ссылку</string>
    <string name="modal_edit">Редактировать статью</string>
    <string name="modal_change_cover">Изменить обложку</string>
    <string name="modal_delete">Удалить статью</string>
    <string name="editor_next">Далее</string>
    <string name="editor_save">Сохранить</string>
    <string name="editor_title_placeholder">Название</string>
    <string name="editor_content_placeholder">Текст статьи</string>
    <string name="next_editor_title">Подготовка к публикации</string>
    <string name="next_editor_cover_label">Обложка</string>
    <string name="next_editor_load_cover">Загрузить изображение</string>
    <string name="next_editor_change_cover">Изменить обложку</string>
    <string name="next_editor_url_label">Сформированный URL</string>
    <string name="next_editor_url_placeholder">content://com.example.art-music/@</string>
    <string name="next_editor_submit">Опубликовать</string>
    <string name="message_add_success">статья успешно добавлена</string>
    <string name="message_add_error">не удалось добавить статью</string>
    <string name="message_fill_title">поле \"Название\" должно быть заполнено</string>
    <string name="message_fill_content">поле \"Текст статьи\" должно быть заполнено</string>
    <string name="message_copied_link">ссылка скопирована в буфер обмена</string>
    <string name="message_remove_success">статья удалена</string>
    <string name="message_remove_undo">ОТМЕНА</string>
    <string name="message_remove_error">не удалось удалить статью</string>
    <string name="message_update_error">не удалось обновить статью</string>
    <string name="notification_title">Муза зовёт!</string>
    <string name="notification_description">Давно не видели Ваших статей, читатели ждут</string>
    <string name="article1_title">100 лучших песен и альбомов 2020-х годов по версии читателей Pitchfork</string>
    <string name="article2_title">Почему музыка заставляет нас чувствовать себя хорошо?</string>
    <string name="article3_title">26 претендентов на «Песню лета 2024»</string>
    <string name="article4_title">Утраченные обещания гиперпоптимизма</string>
    <string name="author_label">"Автор: "</string>
    <string name="article1_author">Pitchfork</string>
    <string name="article2_author">Филип Болл</string>
    <string name="article3_author">Pitchfork</string>
    <string name="article4_author">Киран Пресс-Рейнольдс</string>
    <string name="article1_date">4 октября 2024</string>
    <string name="article2_date">19 апреля 2013</string>
    <string name="article3_date">26 августа 2024</string>
    <string name="article4_date">3 октября 2024</string>
    <string name="article1_content">"Несколько недель назад мы запустили опрос читателей Pitchfork 2020s So Far. Тысячи читателей проголосовали за лучшие песни и альбомы полудесятилетия, и вот результаты. (Спасибо за Ваши голоса!)
        100 лучших песен 2020-х годов по версии читателей Pitchfork:
        100. black midi: “Welcome to Hell”
        99. Beyoncé: “Virgo\'\s Groove”
        98. Yeah Yeah Yeahs: “Spitting Off the Edge of the World” [feat. Perfume Genius]
        97. black midi: “John L”
        96. Hikaru Utada: “Somewhere Near Marseilles”
        95. MJ Lenderman: “Knockin”
        94. Baby Keem: “Family Ties” [feat. Kendrick Lamar]
        93. Black Country, New Road: “Concorde”
        92. Caroline Polachek: “Welcome to My Island”
        91. Megan Thee Stallion: “Savage Remix” [feat. Beyoncé]
        90. Sufjan Stevens: “Shit Talk”
        89. Fleet Foxes: “Sunblind”
        88. Harry Styles: “As It Was”
        87. Jessie Ware: “Free Yourself”
        86. ANOHNI and the Johnsons: “It Must Change”
        85. PinkPantheress / Ice Spice: “Boy’s a Liar Pt. 2”
        84. Caroline Polachek: “Pretty in Possible”
        83. Caroline Polachek: “I Believe”
        82. Perfume Genius: “Describe”
        81. Mannequin Pussy: “I Got Heaven”
        80. Charli XCX: “365”
        79. Magdalena Bay: “Chaeri”
        78. Dry Cleaning: “Scratchcard Lanyard”
        77. Christine and the Queens: “People, I’ve been sad”
        76. The 1975: “If You’re Too Shy (Let Me Know)”
        75. Turnstile: “MYSTERY”
        74. Jessica Pratt: “Life Is”
        73. Kelela: “Contact”
        72. Taylor Swift: “mirrorball”
        71. Beyoncé: “YA YA”
        70. Taylor Swift: “Anti-Hero”
        69. Phoebe Bridgers: “Kyoto”
        68. Olivia Rodrigo: “get him back!”
        67. Waxahatchee: “Lilacs”
        66. Olivia Rodrigo: “deja vu”
        65. Bob Dylan: “Murder Most Foul”
        64. 100 gecs: “Hollywood Baby”
        63. Jessie Ware: “Spotlight”
        62. Wednesday: “Chosen to Deserve”
        61. Wednesday: “Bull Believer”
        60. Low: “Days Like These”
        59. Nilüfer Yanya: “Midnight Sun”
        58. Haim: “The Steps”
        57. Carly Rae Jepsen: “Psychedelic Switch”
        56. Weyes Blood: “It’s Not Just Me, It’s Everybody”
        55. Yves Tumor: “Gospel for a New Century”
        54. Taylor Swift: “the last great american dynasty”
        53. Cardi B: “WAP” [ft. Megan Thee Stallion]
        52. Little Simz: “Introvert”
        51. Dua Lipa: “Physical”
        50. Phoebe Bridgers: “Garden Song”"
    </string>
</resources>