<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/article_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimary">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/disk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.85"
        android:contentDescription="@string/icon_back"
        android:textColor="@color/md_theme_onSecondaryContainer"
        android:backgroundTint="@color/md_theme_secondaryContainer"
        app:icon="@drawable/arrow_back"
        app:iconSize="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_more"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.85"
        android:contentDescription="@string/icon_more"
        android:textColor="@color/md_theme_onSecondaryContainer"
        android:backgroundTint="@color/md_theme_secondaryContainer"
        app:icon="@drawable/more_vert"
        app:iconSize="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="-30dp"
            app:cardBackgroundColor="@color/md_theme_onPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cover"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="110dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:lineSpacingMultiplier="0.9"
                    android:text="@string/no_article"
                    android:textColor="@color/md_theme_error"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:fontFamily="@font/source_serif_4_bold" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:lineSpacingMultiplier="0.9"
                    android:text="@string/article1_title"
                    android:textColor="@color/md_theme_onSurface"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/source_serif_4_bold" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/author_label"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/author_label"
                        android:textColor="@color/md_theme_onSurfaceVariant"
                        android:textSize="13sp"
                        app:fontFamily="@font/inter" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/author"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:text="@string/article1_author"
                        android:textColor="@color/md_theme_onSurfaceVariant"
                        android:textSize="13sp"
                        app:fontFamily="@font/inter" />
                </LinearLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/publish_date"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date_placeholder"
                    android:textColor="@color/md_theme_outline"
                    android:textSize="11sp"
                    app:fontFamily="@font/inter" />

                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:lineSpacingMultiplier="1.0"
                    android:text="@string/article1_content"
                    android:textColor="@color/md_theme_onSurface"
                    android:textSize="13sp"
                    app:fontFamily="@font/inter" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>