<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_light">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/md_theme_onPrimary"
        app:cardCornerRadius="30dp"
        app:strokeWidth="0dp"
        tools:context=".editor.EditorSubmitFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-10dp"
                    android:contentDescription="@string/icon_back"
                    app:icon="@drawable/arrow_back"
                    app:iconSize="24dp"
                    app:iconTint="@color/md_theme_onSurfaceVariant" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/next_editor_title"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter"
                android:gravity="start"
                android:text="@string/next_editor_url_label"
                android:textColor="@color/md_theme_onSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_onSurface"
                android:textColorHint="@color/md_theme_outline"
                app:boxBackgroundColor="@color/md_theme_surfaceContainerLow"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/formed_uri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:enabled="false"
                    android:hint="@string/next_editor_url_placeholder"
                    android:textColor="@color/md_theme_onSurface"
                    android:textColorHint="@color/md_theme_outline"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:contentDescription="@string/image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover3"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/post_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:fontFamily="@font/inter_bold"
                android:letterSpacing="0.06"
                android:text="@string/next_editor_submit"
                android:textSize="15sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>