<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/md_theme_onPrimary"
    app:cardCornerRadius="12dp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:srcCompat="@drawable/cover1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingTop="15dp"
            android:paddingRight="18dp"
            android:paddingBottom="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:lineSpacingMultiplier="0.8"
                android:text="@string/article1_title"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="17sp"
                android:textStyle="bold"
                app:fontFamily="@font/source_serif_4_bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/author_label"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/author_label"
                    android:textColor="@color/md_theme_onSurfaceVariant"
                    android:textSize="13sp"
                    app:fontFamily="@font/inter" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/author"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="2dp"
                    android:text="@string/article1_author"
                    android:textColor="@color/md_theme_onSurfaceVariant"
                    android:textSize="13sp"
                    app:fontFamily="@font/inter" />
            </LinearLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/publish_date"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_placeholder"
                android:textColor="@color/md_theme_outline"
                android:textSize="11sp"
                app:fontFamily="@font/inter" />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>

