<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editor.EditorFragment">

    <LinearLayout
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="30dp"
        android:background="@color/md_theme_onPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="end"
                android:text="@string/editor_next"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onSurface"
            android:textColorHint="@color/md_theme_outline"
            app:boxBackgroundColor="@color/md_theme_onPrimary"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editor_title_placeholder" />
        </com.google.android.material.textfield.TextInputLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_onSurface"
                android:textColorHint="@color/md_theme_outline"
                app:boxBackgroundColor="@color/md_theme_onPrimary"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/content_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_content_placeholder" />
            </com.google.android.material.textfield.TextInputLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>